[#14] Add CRUD for lots/items